# dgc-decoder

./: .gitignore  Cargo.toml  README.md  ressources.md
decoder/: Cargo.toml
decoder/src/: main.rs
libdgc/: Cargo.toml
libdgc/src/: cose.rs  dgc.rs  display.rs  hcert.rs  keystore.rs  lib.rs
libdgc/src/cwt/: mod.rs  sign.rs
libdgc/src/dgc/: decoded.rs  error.rs  mod.rs  raw.rs  verified.rs
libkeystore/: Cargo.toml
libkeystore/src/: error.rs  keystore.rs  lib.rs
ressources/: ressources.md
src/: cose.rs  dgc.rs  display.rs  lib.rs  main.rs
src/cwt/: sign.rs
