[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdgc = { path = "../libdgc" }
clap = { version = "3.0.11", features = ["derive"] }
reqwest = "0.11.9"
libkeystore = { path = "../libkeystore" }
log = "0.4.14"
fern = "0.6.0"
