[package]
name = "libkeystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
webpki = "0.22.0"
asn1_der = "0.7.5"
serde_json = "1.0.75"
base64 = "0.13.0"
x509-parser = "0.12.0"
